plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.droidevs'
version = '0.0.1-SNAPSHOT'
description = 'MClub'

java {
    toolchain {
        // Spring Boot 3.3.x + Lombok/MapStruct are stable on Java 21.
        // JDK 25 currently breaks Lombok annotation processing.
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springModulithVersion', "2.0.5")
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:1.20.4"
    }
}
dependencies {
    // --- SPRING CORE ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Enables Thymeleaf sec:authorize / sec:authentication
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Redis (only if used)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // --- DATABASE ---
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // --- JWT ---
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // --- MAPSTRUCT (STABLE) ---
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    // --- LOMBOK ---
    compileOnly 'org.projectlombok:lombok'

    // --- ANNOTATION PROCESSORS ---
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // --- MODULITH ---
    implementation 'org.springframework.modulith:spring-modulith-starter-core'

    // --- DEV ---
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // --- TEST ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'

    // Needed for Gradle/JUnit Platform in some environments
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testRuntimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

test {
    useJUnitPlatform()
}